Début du projet

--- a/pageTest.htm
+++ b/pageTest.htm
@@ -35,10 +35,7 @@
             <li>Ligne 5 - top</li>
         </ol>
         <a href="https://reseau-e2c.fr/">Un lien hypertexte</a>
-        <img src="./MangaBerserk.webp" alt="Image du manga Berserk">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/gRvEAeHmkXI?si=vqVO5_1Pq9eZ3qXK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <img src="MangaBerserk.webp" alt="Image du Manga Berserk">
         
-
-    
     </body>
 </html>
